#179 - updated app/dmg build scripts for new Mac, updated Java version