@@ -14,7 +14,7 @@ SIGN_KEY="Developer ID Application: Information Management Services, Inc. (VF82M
 BUNDLEDIR="/Users/treescan/prj/treescan.development/jpackaged"
 BINARIES="/Users/treescan/prj/treescan.development/binaries/mac"
 #JAVAJDK="/Users/treescan/prj/java/jdk-16.0.2+7/Contents/Home" # AdoptJDK
-JAVAJDK="/Users/treescan/prj/java/jdk-17.0.2+8/Contents/Home" # AdoptJDK
+JAVAJDK="/Users/treescan/prj/java/jdk-17.0.5+8/Contents/Home" # AdoptJDK
 ENTITLEMENTS="${SRCDIR}/installers/macosentitlements.plist"
 XCRUN="/usr/bin/xcrun"
 ALTOOL="/Applications/Xcode.app/Contents/Developer/usr/bin/altool"
@@ -52,6 +52,17 @@ codesign -vvv --strict $BUNDLEDIR/imagesrc/libtreescan.jnilib
 codesign --entitlements  ${ENTITLEMENTS} --options runtime --timestamp -f -v -s "${SIGN_KEY}" $BUNDLEDIR/imagesrc/TreeScan.jar
 codesign -vvv --strict $BUNDLEDIR/imagesrc/TreeScan.jar
 
+####### $JAVAJDK/bin/jpackage --verbose --type app-image --input $BUNDLEDIR/imagesrc --main-jar TreeScan.jar \
+#######                       --icon $SRCDIR/installers/izpack/mac/treescan2app/Mac-App-Template/Contents/Resources/TreeScan.icns \
+####### 					  --app-version ${APPVERSION} --name TreeScan --dest $BUNDLEDIR --java-options "-Djava.library.path=\$APPDIR" \
+####### 					  --mac-sign \
+#######             --mac-package-signing-prefix org.treescan.TreeScan \
+#######             --mac-signing-key-user-name "${SIGN_KEY}" \
+#######             --mac-package-name "TreeScan" \
+#######             --mac-entitlements ${ENTITLEMENTS} \
+####### 					  --add-modules java.base,java.datatransfer,java.desktop,java.logging,java.prefs,java.xml,java.xml.crypto,jdk.crypto.cryptoki,jdk.accessibility
+####### 
+
 # Create TreeScan app directory
 $JAVAJDK/bin/jpackage --verbose --type app-image --input $BUNDLEDIR/imagesrc --main-jar TreeScan.jar \
                       --icon $SRCDIR/installers/izpack/mac/treescan2app/Mac-App-Template/Contents/Resources/TreeScan.icns \
@@ -59,15 +70,75 @@ $JAVAJDK/bin/jpackage --verbose --type app-image --input $BUNDLEDIR/imagesrc --m
 					  --add-modules java.base,java.datatransfer,java.desktop,java.logging,java.prefs,java.xml,java.xml.crypto,jdk.crypto.cryptoki,jdk.accessibility
 
 # Sign APP's runtime and itself.
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/app/libtreescan.jnilib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/app/libtreescan.jnilib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/app/treescan
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/app/treescan
 codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/MacOS/libjli.dylib
 codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/MacOS/libjli.dylib
+
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libnet.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libnet.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libnio.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libnio.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libzip.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libzip.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libfreetype.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libfreetype.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjli.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjli.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libsplashscreen.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libsplashscreen.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libj2pkcs11.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libj2pkcs11.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjimage.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjimage.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosxui.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosxui.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libawt_lwawt.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libawt_lwawt.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjavajpeg.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjavajpeg.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libmlib_image.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libmlib_image.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjsound.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjsound.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjsig.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjsig.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libprefs.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libprefs.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjawt.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjawt.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libfontmanager.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libfontmanager.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/jspawnhelper
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/jspawnhelper
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosxsecurity.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosxsecurity.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/liblcms.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/liblcms.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libverify.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libverify.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjava.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libjava.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libawt.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libawt.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosx.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosx.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosxapp.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/libosxapp.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/server/libjvm.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/server/libjvm.dylib
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/server/libjsig.dylib
+codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/runtime/Contents/Home/lib/server/libjsig.dylib
+
 codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app/Contents/MacOS/TreeScan
 codesign -vvv --strict $BUNDLEDIR/TreeScan.app/Contents/MacOS/TreeScan
-codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f $BUNDLEDIR/TreeScan.app
+codesign -s "${SIGN_KEY}" --options runtime --entitlements ${ENTITLEMENTS} --timestamp -vvv -f --deep $BUNDLEDIR/TreeScan.app
 codesign -vvv --strict $BUNDLEDIR/TreeScan.app
 spctl -vvv --assess --type exec $BUNDLEDIR/TreeScan.app
 
-# Create zip file from TreeScan.app notarize application alone.
+# create zip file from TreeScan.app notarize application alone.
 ditto -c -k --sequesterRsrc --keepParent $BUNDLEDIR/TreeScan.app $BUNDLEDIR/TreeScan.zip
 
 # Notorize TreeScan.dmg
